--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -31,25 +31,41 @@
         <br>
         <br>    
 
+        <div class="center">
+            <h1>Padrão Usado</h1>
+        </div>
+
+        <br>
+
+        <p style="font-size: 22px"></p>
+
+        <br>
+
+        <br>
+        <br> 
+        <hr>
+        <br>
+        <br>    
+
         <div class="grid">
             <h2>Desenvolvido por</h2>
         </div>
 
         <div class="grid">
             <article data-theme="light" class="card">
-                <img src="img/erick.png" width="200px;">
+                <img src="https://files.catbox.moe/0mxbni.png" width="200px;">
                 <h4>Erick Sousa Santos</h4>
                 <p>Estudante de Desenvolvimento de Software Multiplataforma na FATEC Zona Sul.</p>
                 <a href="http://ericksantos12.neocities.org">Neocities</a>
             </article>
             <article data-theme="light" class="card">
-                <img src="img/gani" alt="">
+                <img src="https://files.catbox.moe/b0evf0.png" width="200px;">
                 <h4>Gabrielle Carvalho Gonçalves das Neves</h4>
                 <p>Estudante de Desenvolvimento de Software Multiplataforma na FATEC Zona Sul.</p>
                 <a href="https://gabriellecgneves.neocities.org/">Neocities</a>
             </article>
             <article data-theme="light" class="card">
-                <img src="img/gui" alt="">
+                <img src="https://files.catbox.moe/fx0dbl.jpg" width="200px;">
                 <h4>Guilherme Soares de Sousa</h4>
                 <p>Estudante de Desenvolvimento de Software Multiplataforma na FATEC Zona Sul.</p>
             </article>
